--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "@nuxt/icon": "^1.14.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^3.1.3",
+    "@nuxtjs/supabase": "^1.5.2",
+    "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@tailwindcss/vite": "^4.1.10",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.5",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
