--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@nuxt/ui": "^3.1.3",
     "@nuxtjs/supabase": "^1.5.2",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
+    "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/vite": "^4.1.10",
     "animejs": "^4.0.2",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.5",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
