--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@nuxt/icon": "^1.14.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^3.1.3",
+    "@nuxtjs/sitemap": "^7.4.2",
     "@nuxtjs/supabase": "^1.5.2",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
     "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/vite": "^4.1.10",
+    "@vite-pwa/nuxt": "^1.0.4",
     "animejs": "^4.0.2",
     "eslint": "^9.29.0",
     "nuxt": "^3.17.5",
