--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxt/icon": "^1.14.0",
     "@nuxt/image": "^1.10.0",
     "@nuxt/ui": "^3.1.3",
+    "@nuxtjs/seo": "^3.1.0",
     "@nuxtjs/sitemap": "^7.4.2",
     "@nuxtjs/supabase": "^1.5.2",
     "@nuxtjs/tailwindcss": "^7.0.0-beta.0",
@@ -25,6 +26,7 @@
     "@vite-pwa/nuxt": "^1.0.4",
     "animejs": "^4.0.2",
     "eslint": "^9.29.0",
+    "motion-v": "^1.3.1",
     "nuxt": "^3.17.5",
     "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
