--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "motion-v": "^1.3.1",
     "nuxt": "^4.0.3",
     "pinia": "^3.0.3",
+    "sharp": "^0.34.3",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
